# django-llm

./: .gitignore  AUTHORS  CHANGELOG  Dockerfile  LICENSE.md  README.md  TODO.md  build.sh  requirements.txt  setup.cfg  setup.py  static.sh  static.txt
llm/: admin.py  apps.py  forms.py  urls.py  views.py
llm/managers/: base.py  openai.py
llm/migrations/: 0001_initial.py  0002_rename_modelapi_modelproviderapi_and_more.py  0003_openaichatquery.py  0004_prompt_num_input_vars.py  0005_remove_openaichatquery_query_response_and_more.py  0006_remove_prompt_input_variables_and_more.py  0007_alter_modelproviderapi_id_alter_openaichatquery_id_and_more.py  0008_remove_openaichatquery_memory.py
llm/models/: __init__.py  base.py  prompts.py  queries.py
llm/templates/: api_detail.html  api_list.html  base.html  create_api.html  create_prompt.html  delete_api.html  edit_api.html  edit_prompt.html  openai_chat_query_list.html  process_api.html  process_prompt.html  prompt_detail.html  prompt_list.html  query_confirm_delete.html  query_detail.html  query_form.html  query_list.html
