[metadata]
name = django-llm
version = 
author = "Michael Lynch"
author_email = "michael@flatlander.dev"
description = "A LLM (Large Language Model) app for Django"
long_description = file: README.md
long_description_content_type = text/markdown
url = "<package URL>"
license = "<package license>"
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: <license name>
    Operating System :: OS Independent

[options]
packages = find:
#TODO test down to 3.7
python_requires = >=3.11

[options.packages.find]
exclude = tests

[flake8]
exclude = migrations
max-line-length = 90

[pylint]
#ignore-paths=.*/migrations/*
max-line-length=90

[tool:pytest]
addopts = -v --cov=<package name> --cov-report=term-missing
testpaths = tests